; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_ui_begin_text.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/platform/gl/extr_gl-font.c_ui_begin_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GL_TEXTURE_2D = common dso_local global i32 0, align 4
@g_cache_tex = common dso_local global i32 0, align 4
@GL_SRC_ALPHA = common dso_local global i32 0, align 4
@GL_ONE_MINUS_SRC_ALPHA = common dso_local global i32 0, align 4
@GL_BLEND = common dso_local global i32 0, align 4
@GL_QUADS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ui_begin_text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ui_begin_text() #0 {
  %1 = load i32, i32* @GL_TEXTURE_2D, align 4
  %2 = load i32, i32* @g_cache_tex, align 4
  %3 = call i32 @glBindTexture(i32 %1, i32 %2)
  %4 = load i32, i32* @GL_SRC_ALPHA, align 4
  %5 = load i32, i32* @GL_ONE_MINUS_SRC_ALPHA, align 4
  %6 = call i32 @glBlendFunc(i32 %4, i32 %5)
  %7 = load i32, i32* @GL_BLEND, align 4
  %8 = call i32 @glEnable(i32 %7)
  %9 = load i32, i32* @GL_TEXTURE_2D, align 4
  %10 = call i32 @glEnable(i32 %9)
  %11 = load i32, i32* @GL_QUADS, align 4
  %12 = call i32 @glBegin(i32 %11)
  ret void
}

declare dso_local i32 @glBindTexture(i32, i32) #1

declare dso_local i32 @glBlendFunc(i32, i32) #1

declare dso_local i32 @glEnable(i32) #1

declare dso_local i32 @glBegin(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
